# robotframework-jsonlib

./: .gitignore  AGENT.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  run_build_only.sh  run_ci_checks.sh  run_pypi_upload.sh  run_testpypi_upload.sh  run_tests_only.sh  setup.py  tasks.py
.github/workflows/: python-app.yml
JSONLib/: __init__.py  jsonlib.py
acceptance/: JSONLib.robot
docs/: index.html
tests/: .coveragerc  test_JSONLib.py
